# quadrotors_landing_vision

docker/: Dockerfile  docker-compose.yml  entrypoint.sh
quadrotors_landing_vision/: CMakeLists.txt  package.xml
quadrotors_landing_vision/config/drone/: landing_controller.yaml
quadrotors_landing_vision/launch/: quadrotors_landing_vision.launch
quadrotors_landing_vision/launch/drone/: drone_fsm.launch  landing_controller.launch
quadrotors_landing_vision/launch/positioning/: aruco_estimator.launch  uwb_lqr_vanc_estimator.launch
quadrotors_landing_vision/launch/sensor_sim/: uwb_simulator.launch
quadrotors_landing_vision/launch/spawners/: spawn_husky.launch
quadrotors_landing_vision/launch/ugv/: ugv_control.launch
quadrotors_landing_vision/models/husky/urdf/: ugv.urdf.xacro
quadrotors_landing_vision/models/terrain/: model.sdf
quadrotors_landing_vision/scripts/drone/: drone_fsm.py  landing_controller.py
quadrotors_landing_vision/scripts/positioning/: aruco_estimator.py  uwb_lqr_vanc_estimator.py
quadrotors_landing_vision/scripts/sensor_sim/: uwb_simulator.py
quadrotors_landing_vision/scripts/ugv/: ugv_control.py
